--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -11,8 +11,8 @@
     "BloggieAuthDbConnectionString": "Server=DESKTOP-NTC3M93\\MSSQLSERVER2022;Database=BloggieAuthDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   },
   "Cloudinary": {
-    "CloudName": "dnlzmazoq",
-    "ApiKey": "279636224497313",
-    "ApiSecret": "vrkliq9hhlkIFl_FCyZtq4aOUcI"
+    "CloudName": "******",
+    "ApiKey": "**********",
+    "ApiSecret": "**********"
   }
 }
